# EdgeProxy

./: .gitignore  Cargo.toml  README.md  config.yaml
docs/: metrics.md
examples/: .env  .env.example  base.yml  bot.rs  demo.yaml  upstream.rs
fixtures/config/: base.yml  loglevel.yml  override.yml  undefined-var.yml
src/: config.rs  main.rs
src/config/: blueprint.rs  error.rs  load.rs  merge.rs  mod.rs  model.rs  resolve.rs
src/proxy/: backend.rs  lb.rs  mod.rs  routing.rs
src/telemetry/: init.rs  layer.rs  metrics.rs  mod.rs
