[package]
name = "Edgeproxy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio  = { version = "1", features = ["full"] }
axum = "0.7"
http = "1"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1", features = ["http1"]}
hyper-util = {version = "0.1", features = ["client-legacy", "http1", "tokio"]}